# QEvals

./: .gitignore  CLAUDE.md  LICENSE  _probe_grok.py  _probe_native.py  _probe_reasoning.py  cleaner.py  config.py  cost_calc.py  draft_refine_sympy.py  draft_refine_test.py  full_questions.py  generate.py  hybrid_cost_calc.py  hybrid_test.py  judge.py  llm_utils.py  optimise.py  parse_utils.py  pipeline_test.py  prompts.py  pyproject.toml  q_solver.py  report.py  run.py  sandbox.py  solve.py  sympy_render.py  test_math_prompts.py  test_sympy_render.py  typeset.py
gem_evals/: AGENTS.md  batch_runs.txt  drafter.py  optimiser.py  prompts.txt  prompts_backwards.txt  render.py  render_exam.py  reviewer.py  run_10_drafters.py  run_exam_pipeline.py  test_sympy.py  typesetter.py
gem_evals/exam_pipeline_skill/: SKILL.md
tests/: test_config.py  test_generate.py  test_judge.py  test_llm_utils.py  test_optimise.py  test_parse_utils.py  test_prompts.py  test_report.py  test_run.py  test_sandbox.py  test_solve.py  test_typeset.py
