[project]
name = "evals"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "tabulate>=0.9",
    "google-genai>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
